criação de busca de fideliidades
